--- a/SportApp/SportApp/Pages/AddOrEditPage.xaml
+++ b/SportApp/SportApp/Pages/AddOrEditPage.xaml
@@ -14,9 +14,60 @@
             <RowDefinition Height="60"></RowDefinition>
         </Grid.RowDefinitions>
 
-        <Grid Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center"></Grid>
+        <Grid Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="150"></ColumnDefinition>
+                <ColumnDefinition Width="150"></ColumnDefinition>
+                <ColumnDefinition Width="150"></ColumnDefinition>
+                <ColumnDefinition Width="150"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
 
-        <Button x:Name="GoBackButton" Content="Назад" Click="GoBackButton_Click" Grid.Row="1" Height="30" Width="150"></Button>
-        
+            <Grid.RowDefinitions>
+                <RowDefinition Height="30"></RowDefinition>
+                <RowDefinition Height="30"></RowDefinition>
+                <RowDefinition Height="30"></RowDefinition>
+                <RowDefinition Height="30"></RowDefinition>
+                <RowDefinition Height="30"></RowDefinition>
+                <RowDefinition Height="30"></RowDefinition>
+                <RowDefinition Height="30"></RowDefinition>
+            </Grid.RowDefinitions>
+
+            <Label Content="Имя" Grid.Row="0" Grid.Column="0"></Label>
+            <Label Content="Фамилия" Grid.Row="1" Grid.Column="0"></Label>
+            <Label Content="Отчетсво" Grid.Row="2" Grid.Column="0"></Label>
+            <Label Content="Должность" Grid.Row="3" Grid.Column="0"></Label>
+            <Label Content="Дата рождения" Grid.Row="4" Grid.Column="0"></Label>
+            <Label Content="Телефон" Grid.Row="5" Grid.Column="0"></Label>
+            <Label Content="Пол" Grid.Row="6" Grid.Column="0"></Label>
+
+
+            <Label Content="Email" Grid.Row="0" Grid.Column="2"></Label>
+            <Label Content="Логин" Grid.Row="1" Grid.Column="2"></Label>
+            <Label Content="Пароль" Grid.Row="2" Grid.Column="2"></Label>
+            <TextBlock FontSize="13" TextWrapping="Wrap" Text="Подтверждение пароля" Grid.Row="3" Grid.Column="2"></TextBlock>
+
+
+            <TextBox x:Name="SurnameTextBox" Grid.Row="0" Grid.Column="1"></TextBox>
+            <TextBox x:Name="NameTextBox" Grid.Row="1" Grid.Column="1"></TextBox>
+            <TextBox x:Name="PatronymicTextBox" Grid.Row="2" Grid.Column="1"></TextBox>
+            <ComboBox x:Name="RoleComboBox" Grid.Row="3" Grid.Column="1" DisplayMemberPath="Role"></ComboBox>
+            <DatePicker x:Name="DateOfBirthDatePicker" Grid.Row="4" Grid.Column="1"></DatePicker>
+            <TextBox x:Name="PhoneNumberTextBox" Grid.Row="5" Grid.Column="1"></TextBox>
+            <ComboBox x:Name="GenderComboBox" Grid.Row="6" Grid.Column="1" DisplayMemberPath="Gender"></ComboBox>
+
+
+            <TextBox x:Name="EmailTextBox" Grid.Row="0" Grid.Column="3"></TextBox>
+            <TextBox x:Name="LoginTextBox" Grid.Row="1" Grid.Column="3"></TextBox>
+            <PasswordBox x:Name="UserPasswordBox" Grid.Row="2" Grid.Column="3"></PasswordBox>
+            <PasswordBox x:Name="RepetePasswordBox" Grid.Row="3" Grid.Column="3"></PasswordBox>
+
+        </Grid>
+
+        <Button x:Name="GoBackButton" Content="Назад" Click="GoBackButton_Click" Grid.Row="1" Height="30" Width="150"
+                HorizontalAlignment="Left"></Button>
+
+        <Button x:Name="AddButton" Content="Добавить" Click="AddButton_Click" Grid.Row="1" Height="30" Width="150"
+                HorizontalAlignment="Right"></Button>
+
     </Grid>
 </Page>
