--- a/SportApp/SportApp/MainWindow.xaml
+++ b/SportApp/SportApp/MainWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SportApp"
         mc:Ignorable="d"
-        Title="MainWindow" Height="700" Width="1100">
+        Title="MainWindow" Height="700" Width="1000" 
+        MinHeight="700" MinWidth="1000">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="60"></RowDefinition>
@@ -16,7 +17,7 @@
             <TextBlock Text="ИС по прокату спортивного инвентаря" HorizontalAlignment="Center"
                        VerticalAlignment="Center" FontSize="23"></TextBlock>
             <Image Source="/Res/logo.png" VerticalAlignment="Center"
-                   HorizontalAlignment="Left" Margin="150,0,0,0"></Image>
+                   HorizontalAlignment="Left" Margin="200,0,0,0"></Image>
         </Grid>
 
         <Frame x:Name="MainFrame" NavigationUIVisibility="Hidden" VerticalAlignment="Center"
